Rectification of code post sonar lint