@@ -7,7 +7,6 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ToString
 @Builder
@@ -67,7 +66,7 @@ public class UserDto implements UserDetails {
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return this.roles.stream()
                 .map(authority -> new SimpleGrantedAuthority(authority.name()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     //    @JsonIgnore
